--- a/opentreemap/treemap/css/sass/_base.scss
+++ b/opentreemap/treemap/css/sass/_base.scss
@@ -1,5 +1,5 @@
 // Fonts
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:100,400,700);
+@import url(//fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:100,400,700);
 $base-font-family               : 'Open Sans', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $base-font-size                 : 16px;
 
