--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -1,6 +1,7 @@
 {% extends "instance_base.html" %}
 {% load instance_config %}
 {% load i18n %}
+{% load l10n %}
 {% load auth_extras %}
 {% load form_extras %}
 
