Fix regression with localization

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -114,7 +114,9 @@
 
           {# Hidden id fields for use in creating a new tree #}
           {% create from "tree.plot" for request.user in request.instance withtemplate "treemap/field/hidden.html" %}
+          {% localize off %}
           {% field from "plot.id" for request.user withtemplate "treemap/field/hidden.html" %}
+          {% endlocalize %}
           {% endusercancreate %}
         </div>
         <div id="tree-details" {{ has_tree|yesno:",style=display:none;" }}>
