--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -39,53 +39,9 @@
          class="btn btn-mini add-photos">{% trans "Add Photo" %}</a>
       <div id="upload-error" class="text-error" style="display: none"></div>
       <hr>
-
-      <h3>{% trans "Latest Update" %}</h3>
-
-      <p>
-        {{ latest_update.user.username }}
-        {{ latest_update.short_descr }}
-        on {{ latest_update.updated|date:request.instance.date_format }}
-      </p>
-
-      <h5>{{ progress_percent }}% {% trans "Complete" %}</h5>
-
-      <div class="progress">
-        <div class="bar" style="width: {{ progress_percent }}%;"></div>
+      <div id="sidebar">
+        {% include "treemap/partials/sidebar.html" %}
       </div>
-      <ul>
-        {% for message in progress_messages %}
-          <li>{{ message }}</li>
-        {% endfor %}
-      </ul>
-      <hr>
-      <h3>{% trans "Recent Edits" %}</h3>
-      <ul>
-        {% for user, updated, audits in recent_activity %}
-        <li>
-          <div>{{ user.username }}</div>
-          <ul>
-            {% for audit in audits %}
-              <li>{{ audit.short_descr }}</li>
-            {% endfor %}
-          </ul>
-          <div>{{ updated|date:request.instance.date_format }}</div>
-          <div>({{ updated|naturaltime }})</div>
-        </li>
-        {% endfor %}
-      </ul>
-      <h3>{% trans "Nearby Trees" %}</h3>
-      {% with nearby=plot.nearby_plots %}
-      {% if nearby %}
-      </ul>
-      {% for plot in nearby %}
-        <li><a href="{% url 'plot_detail' instance_url_name=request.instance.url_name plot_id=plot.pk %}">{{ plot.pk }}</a></li>
-      {% endfor %}
-      </ul>
-      {% else %}
-      <div>{% trans "There are no trees nearby" %}</div>
-      {% endif %}
-      {% endwith %}
     </div>
     <div class="span6">
       <h1>{{ tree.species.common_name }}</h1>
@@ -230,12 +186,15 @@
       }
 
       var updateEcoUrl = U.appendSegmentToUrl('eco', updateUrl);
+      var updateSidebarUrl = U.appendSegmentToUrl('sidebar', updateUrl);
 
       plot.init({
           config: config,
           startInEditMode: {% if editmode %}true{% else %}false{% endif %},
           updateEcoUrl: updateEcoUrl,
           ecoBenefits: '#ecobenefits',
+          updateSidebarUrl: updateSidebarUrl,
+          sidebar: '#sidebar',
           inlineEditForm: {
               updateUrl: updateUrl,
               form: '#plot-form',
