--- a/opentreemap/treemap/templates/treemap/field/search.html
+++ b/opentreemap/treemap/templates/treemap/field/search.html
@@ -3,29 +3,25 @@
 {% if field.is_visible %}
   <form class="form-inline" role="form">
     <div class="form-group">
-      {{ field.label }}
+      <label>{{ field.label }}</label>
     </div>
+    <div class="form-group">
     {% if field.search_type == 'RANGE' %}
       {% with 'data-class=search data-search-type=MIN' as extras %}
-        <div class="form-group">
           {% include "treemap/field/inputs.html" with extra=extras %}
-        </div>
       {% endwith %}
-      <div class="form-group">
-        {# Translators: text in-between min and max search filter boxes #}
-        {% trans " to " %}
-      </div>
-      {% with 'data-class=search data-search-type=MIN' as extra %}
-        <div class="form-group">
-          {% include "treemap/field/inputs.html" with extra=extras %}
+        <div class="text-separator">
+          {# Translators: text in-between min and max search filter boxes #}
+          {% trans " to " %}
         </div>
+      {% with 'data-class=search data-search-type=MIN' as extra %}
+          {% include "treemap/field/inputs.html" with extra=extras %}
       {% endwith %}
     {% else %}
       {% with 'data-class=search data-search-type='|add:field.search_type as extras %}
-        <div class="form-group">
           {% include "treemap/field/inputs.html" with extra=extras %}
-        </div>
       {% endwith %}
     {% endif %}
+    </div>
   </form>
 {% endif %}
