Allow html in labels
This is useful, for instance, if you want to put dynamic content
into a label. If we had some sort of eco benefits page you might
want a label like:

```
<span class="currency">$</span> per kWh
```

Then in js one could do:

```
$('.currency').html(new_curreny_value);
```

--- a/opentreemap/treemap/templates/treemap/field/div.html
+++ b/opentreemap/treemap/templates/treemap/field/div.html
@@ -1,5 +1,5 @@
 {% if field.is_visible %}
-    <label>{% block label %}{{ field.label }}{% endblock label %}</label>
+    <label>{% block label %}{{ field.label|safe }}{% endblock label %}</label>
     <div class="field-view"
         {% include "treemap/field/attrs.html" with class="display" %}>
         {{ field.display_value|default_if_none:"" }}
