--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -33,7 +33,7 @@
          data-href="{{ request.get_full_path }}"
          disabled="disabled"
          data-disabled-title="{% trans "Adding tree photos is not available to all users" %}"
-         class="btn btn-mini add-photos">{% trans "Add Photos" %}</a>
+         class="btn btn-mini add-photos">{% trans "Add Photo" %}</a>
       <div id="upload-error" class="text-error" style="display: none"></div>
       <hr>
       
