--- a/opentreemap/treemap/css/sass/partials/_sidebar.scss
+++ b/opentreemap/treemap/css/sass/partials/_sidebar.scss
@@ -142,6 +142,34 @@
         }
 }
 
+#diameter-calculator {
+    width: 100%;
+    margin: 0;
+
+    & + a {
+        font-weight: 300;
+        font-size: 0.75em;
+        margin-bottom: 10px;
+        display: block;
+
+        > i {
+            margin-right: 5px;
+        }
+    }
+
+    th {
+        font-size: 0.75em;
+    }
+    input {
+        margin: 0;
+    }
+}
+
+#add-trunk-row {
+    border-radius: 99px;
+    padding: 2px 5px;
+}
+
 #details-form {
     padding: 10px 15px;
     margin-bottom: 0;
@@ -158,8 +186,6 @@
 #add-tree-address {
     width: 200px;
     font-size: em(14px);
-
-
 }
 
 #benefit-values {
