--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -114,7 +114,7 @@
     z-index: 9999;
     background: #FFF;
     border: 1px solid $well-color !important;
-    box-shadow: 0px 3px 0px rgba(0, 3, 0, 0.3);
+    box-shadow: 0px 3px 0px rgba(0, 3, 0, 0.3), 0 0 10px rgba(0,0,0,.15);
     padding: 15px 15px 12px;
     right: 0;
     border-radius: 6px;
@@ -132,6 +132,10 @@
         border-bottom: 10px solid $well-color;
         top: -10px;
         right: 85px;
+    }
+
+    form {
+        margin: 0 0 10px;
     }
 }
 
