--- a/opentreemap/treemap/css/sass/partials/_typography.scss
+++ b/opentreemap/treemap/css/sass/partials/_typography.scss
@@ -75,6 +75,10 @@ textarea,
 .input-append {
 	input {
 		border-radius: 6px 0 0 6px;
+
+		&.span2 {
+			width: 92px;
+		}
 	}
 	span.add-on {
 		padding: 8px;
