--- a/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
+++ b/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
@@ -1,6 +1,6 @@
 {% load diameter %}
 
-<table>
+<table id="diameter-calculator" class="table table-hover">
   <thead>
     <tr>
       <th>Diameter</th>
@@ -8,7 +8,7 @@
         {% if not hide_multiple_trunks %}
           <th>
             <a id="add-trunk-row"
-               class="btn" href="javascript:;">+</a>
+               class="btn btn-mini" href="javascript:;"><i class="icon-plus"></i></a>
           </th>
         {% endif %}
     </tr>
@@ -35,5 +35,5 @@
   </tbody>
 </table>
 {% if not hide_multiple_trunks %}
-<a href="http://player.vimeo.com/video/11119129" target="_blank">measuring multiple trunks?</a>
+<a href="http://player.vimeo.com/video/11119129" target="_blank"><i class="icon-videocam"></i> Measuring multiple trunks?</a>
 {% endif %}
