Fixes #615, toggle button active state

--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -73,6 +73,7 @@
                 cursor: pointer;
                 color: $well-color;
 
+                &.active, 
                 &:hover {
                     color: $main-text-color;
                 }
