--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -8,29 +8,35 @@
       <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#map-info" href="#tree-detail">{% trans "Tree Details" %} <span class="arrow pull-right"><i class="icon-right-open"></i></span></a>
     </div>
     <div id="tree-detail" class="accordion-body collapse">
-      <!-- The button group is hidden until the first tree is clicked -->
       <div class="accordion-body-buttons" id="map-plot-details-button" style="display: none;">
         <a class="btn" data-class="display" id="full-details-button">{% trans "Full Details" %}</a>
-        <button class="btn" data-class="display" id="edit-details-button"
-                title="{% trans "Editing of the tree details is not available to all users" %}"
-                >{% trans "Edit Details" %}</button>
-        <button class="btn" data-class="edit" id="save-details-button" style="display:none">{% trans "Save" %}</button>
-        <button class="btn" data-class="edit" id="cancel-edit-details-button" style="display:none">{% trans "Cancel" %}</button>
+        <button class="btn"
+                data-class="display"
+                id="edit-details-button"
+                data-always-enable="{{ request.instance_user|plot_is_writable }}"
+                data-href="{{ request.get_full_path }}"
+                data-disabled-title="{% trans "Editing of the tree details is not available to all users" %}"
+                disabled="disabled">Edit Details</button>
+                <button class="btn" data-class="edit" id="save-details-button" style="display:none">Save</button>
+                <button class="btn" data-class="edit" id="cancel-edit-details-button" style="display:none">Cancel</button>
       </div>
       <div class="accordion-inner" id="plot-accordion">
       </div>
       <div id="move-plot-buttons">
-        {% with iuser=user|instanceuser:request.instance %}
-        {% if iuser|plot_field_is_writable:"geom" %}
-        <button class="btn btn-success btn-block" style="display:none" id="edit-plot-location">{% trans "Move Tree" %}</button>
-        <button class="btn btn-block" style="display:none"
-                id="cancel-edit-plot-location">{% trans "Cancel Tree Move" %}</button>
-        {% else %}
-        {% trans "Editing a plot's location is not available to all users" as title %}
-        <button data-class="display" class="btn btn-success btn-block" disabled="disabled" title="{{ title }}"
-                id="edit-plot-location">{% trans "Move Tree" %}</button>
-        {% endif %}
-        {% endwith %}
+        <button class="btn btn-success btn-block"
+                data-always-enable="{{ request.instance_user|plot_field_is_writable:"geom" }}"
+                data-href="{{ request.get_full_path }}"
+                data-disabled-title="{% trans "Editing a plot's location is not available to all users" %}"
+                style="display:none"
+                id="edit-plot-location"
+                disabled="disabled">Move Tree</button>
+        <button class="btn btn-success btn-block"
+                data-always-enable="{{ request.instance_user|plot_field_is_writable:"geom" }}"
+                data-href="{{ request.get_full_path }}"
+                data-disabled-title="{% trans "Editing a plot's location is not available to all users" %}"
+                style="display:none"
+                id="cancel-edit-plot-location"
+                disabled="disabled">Cancel Tree Move</button>
       </div>
     </div>
   </div>
