Fix history date display bug on plot detail
This looks like a copy paste bug.

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -70,7 +70,7 @@
             {% endfor %}
           </ul>
           <div>{{ updated|date:request.instance.date_format }}</div>
-          <div>({{ latest_update.updated|naturaltime }})</div>
+          <div>({{ updated|naturaltime }})</div>
         </li>
         {% endfor %}
       </ul>
