DRY up references to the add tree URL hash
We funnel users into adding trees from many places in an effort to
maximize user contributions. As a result, construting the url to the add
tree mode of the map page was scattered in a few different files. I
unified this as best I could by moving the hash text out to settings.py
and then forwarding it through to the templates and the client-side code,
via the templated settings.js.

Fixes #635

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -18,7 +18,7 @@
 {% block instancetopnav %}
 <li class="{% block activeexplore %}active{% endblock %}"><a href="{% url 'map' instance_url_name=request.instance.url_name %}">{% trans "Explore Trees" %}</a></li>
 {% if request.user.is_authenticated %}
-<li><a data-action="addtree" href="{% url 'map' instance_url_name=request.instance.url_name %}#addtree">{% trans "Add a Tree" %}</a></li>
+<li><a data-action="addtree" href="{% url 'map' instance_url_name=request.instance.url_name %}{{ settings.ADD_TREE_URL_HASH }}">{% trans "Add a Tree" %}</a></li>
 {% else %}
 <li><a href="{% url 'django.contrib.auth.views.login' %}?next={{ request.get_full_path }}">{% trans "Add a Tree" %}</a></li>
 {% endif %}
@@ -41,9 +41,9 @@
   <a href="javascript:;" class="btn btn-primary btn-mini exportBtn" id="exportbutton"><i class="icon-export"></i> Export Search Results</a>
   {% endif %}
   {% if request.user.is_authenticated %}
-  <a data-action="addtree" href="{% url 'map' instance_url_name=request.instance.url_name %}#addtree" class="btn btn-primary addBtn"><i class="icon-plus"></i> Add a Tree</a>
+  <a data-action="addtree" href="{% url 'map' instance_url_name=request.instance.url_name %}{{ settings.ADD_TREE_URL_HASH }}" class="btn btn-primary addBtn"><i class="icon-plus"></i> Add a Tree</a>
   {% else %}
-  <a href="{% url 'django.contrib.auth.views.login' %}?next={{ request.get_full_path }}" class="btn btn-primary addBtn"><i class="icon-plus"></i> {% trans "Add a Tree" %}</a>
+  <a href="{% url 'django.contrib.auth.views.login' %}?next={{ request.get_full_path }}{{ settings.ADD_TREE_URL_HASH|urlencode }}" class="btn btn-primary addBtn"><i class="icon-plus"></i> {% trans "Add a Tree" %}</a>
   {% endif %}
 </div>
 {% endblock subhead %}
