--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -42,7 +42,7 @@
               {% if last_instance %}
               <li class="{% block activeexplore %}active{% endblock %}"><a href="{% url 'map' instance_url_name=last_instance.url_name %}">{% trans "Explore Trees" %}</a></li>
               {% if request.user.is_authenticated %}
-              <li><a data-class='add-tree' href="{% url 'map' instance_url_name=last_instance.url_name %}#addtree">{% trans "Add a Tree" %}</a></li>
+              <li><a data-class='add-tree' href="{% url 'map' instance_url_name=last_instance.url_name %}{{ settings.ADD_TREE_URL_HASH }}">{% trans "Add a Tree" %}</a></li>
               {% else %}
               <li><a href="{% url 'django.contrib.auth.views.login' %}?next={{ request.get_full_path }}">{% trans "Add a Tree" %}</a></li>
               {% endif %}
