Update copy on 403 page

--- a/opentreemap/treemap/templates/403.html
+++ b/opentreemap/treemap/templates/403.html
@@ -13,8 +13,8 @@
 <div class="content">
         <div class="well error-panel">
                 <div class="error-icon error-icon-img"><img src="/static/img/403.png"></div>
-                <h2>{% trans "Shut the gates!" %}</h2>
-                <p>{% trans "I'm afraid you don't have permission to go here. Too bad! It's probably pretty cool." %}
+                <h2>{% trans "Page Restricted!" %}</h2>
+                <p>{% trans "Our apologies, but access to this page is limited." %}
                 </p>
         </div>
 </div>
