--- a/opentreemap/treemap/templates/registration/activation_complete.html
+++ b/opentreemap/treemap/templates/registration/activation_complete.html
@@ -2,5 +2,9 @@
 {% load i18n %}
 
 {% block content %}
-<p>{% trans "Your account is now activated." %}</p>
+<div class="content login-signup">
+  <div class="well login-signup-panel">
+  	<h3>{% trans "Your account is now activated." %}</h3>
+  </div>
+</div>
 {% endblock %}
