--- a/opentreemap/treemap/templates/registration/registration_closed.html
+++ b/opentreemap/treemap/templates/registration/registration_closed.html
@@ -2,5 +2,9 @@
 {% load i18n %}
 
 {% block content %}
-	<p>{% trans "Registration is currently closed." %}</p>
+<div class="content login-signup">
+  <div class="well login-signup-panel">
+  	<h3>{% trans "Registration is currently closed." %}</h3>
+  </div>
+</div>
 {% endblock %}
