--- a/opentreemap/treemap/templates/registration/registration_complete.html
+++ b/opentreemap/treemap/templates/registration/registration_complete.html
@@ -2,5 +2,10 @@
 {% load i18n %}
 
 {% block content %}
-<p>{% trans "You are now registered. Activation email sent." %}</p>
+<div class="content login-signup">
+  <div class="well login-signup-panel">
+  	<h3>{% trans "Registration Complete" %}</h3>
+	<p>{% trans "Thank you for registering for an OpenTreeMap account. You will be receiving an activation email shortly. Please click on the link in that email to confirm your account." %}</p>
+  </div>
+</div>
 {% endblock %}
