--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -76,7 +76,7 @@
     <h3>{% trans "Search by Species" %}</h3>
     <div class="search-field-group">
       <a class="typeahead-toggle" id="species-toggle"><i class="icon-menu"></i></a>
-      <input type="text" data-class="search" id="species-typeahead" placeholder="American basswood"/>
+      <input type="text" data-class="search" id="species-typeahead" placeholder="Common or Scientific Name"/>
       <input name="species.id" data-search-type="IS" type="hidden" id="search-species" />
     </div>
   </div>
@@ -86,7 +86,7 @@
     <h3>{% trans "Search by Location" %}</h3>
     <div class="search-field-group">
       <a class="typeahead-toggle" id="boundary-toggle"><i class="icon-menu"></i></a>
-      <input type="text" data-class="search" id="boundary-typeahead" placeholder="340 N 12th St, Philadelphia"/>
+      <input type="text" data-class="search" id="boundary-typeahead" placeholder="Address, City, State"/>
       <input name="plot.geom" data-search-type="IN_BOUNDARY" type="hidden" id="boundary" />
     </div>
   </div>
