Fix input sizing problem

--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -140,6 +140,15 @@
     form {
         margin: 0 0 10px;
     }
+
+    .input-append {
+        input[type="text"] {
+            width: 137px;
+        }
+    }
+    input[type="text"] {
+        width: 170px;
+    }
 }
 
 .subhead {
