--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -27,12 +27,13 @@ active
 {% load i18n %}
 <div class="image-background"></div>
 <div class="container contained profile">
-    <div class="row">
+    <div class="row-fluid">
         <div class="span4">
             <div class="account-info">
                 <img class="user-photo" src="{{STATIC_URL}}img/profile.png">
-                <h1>{{ user.username }}</h1>
-                <p>{% trans "User Profile" %}</p>
+                <h1>{{ user.username }}
+                    <small>{% trans "User Profile" %}</small>
+                </h1>
             </div>
             {% usercontent for user %}
                 <button id="edit-user" data-class="display" class="btn">Edit</button>
