--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -49,6 +49,10 @@ body {
 	box-shadow: 0 3px 0 rgba(0,0,0,.35);
 	margin: 50px auto 90px;
 	position: relative;
+
+	@media (min-width: 1200px) {
+		width: 1100px;
+	}
 }
 
 @media (max-width: 767px) {
