--- a/opentreemap/treemap/templates/treemap/field/inputs.html
+++ b/opentreemap/treemap/templates/treemap/field/inputs.html
@@ -36,7 +36,7 @@
   <div class="input-append">
     <input name="{{ field.identifier }}"
            type="text"
-           class="span2 {{ class|default_if_none:"" }}"
+           class="{{ class|default_if_none:"" }}"
            value="{{ field.value|default_if_none:"" }}"
            {{ extra|default:"" }} />
     <span class="add-on">{{ field.units }}</span>
@@ -44,7 +44,7 @@
   {% else %}
     <input name="{{ field.identifier }}"
            type="text"
-           class="span2 {{ class|default_if_none:"" }}"
+           class="{{ class|default_if_none:"" }}"
            value="{{ field.value|default_if_none:"" }}"
            {{ extra|default:"" }} />
   {% endif %}
