--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -49,9 +49,17 @@ body {
 	box-shadow: 0 3px 0 rgba(0,0,0,.35);
 	margin: 50px auto 90px;
 	position: relative;
+	width: 920px;
 
 	@media (min-width: 1200px) {
 		width: 1100px;
+	}
+	@media (max-width: 979px) and (min-width: 768px) {
+		width: 710px;
+	}
+	@media (max-width: 767px) {
+		width: auto;
+		margin: 50px 10px 90px;
 	}
 }
 
