--- a/opentreemap/treemap/templates/treemap/recent_user_edits.html
+++ b/opentreemap/treemap/templates/treemap/recent_user_edits.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<table id="recent-user-edits" class="table table-hover table-condensed">
+<table id="recent-user-edits" class="table table-hover table-bordered table-condensed">
     <thead>
         <tr>
             <th>{% trans "Action" %}</th>
